--- a/index.ipynb
+++ b/index.ipynb
@@ -350,9 +350,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>cool</th>\n",
+       "      <th>date</th>\n",
+       "      <th>funny</th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>text</th>\n",
+       "      <th>useful</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>month</th>\n",
+       "      <th>Review_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>pomGBqfbxcqPv14c3XH-ZQ</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2012-11-13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>dDl8zu1vWPdKGihJrwQbpw</td>\n",
+       "      <td>5</td>\n",
+       "      <td>I love this place! My fiance And I go here atl...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>jtQARsP6P-LbkyjbO1qNGg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014-10-23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LZp4UX5zK3e-c5ZGSeo3kA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Terrible. Dry corn bread. Rib tips were all fa...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Ums3gaP2qM3W1XcA5r6SsQ</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2014-09-05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>jsDu6QEJHbwP2Blom1PLCA</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Delicious healthy food. The steak is amazing. ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>vgfcTvK81oD4r50NMjU2Ag</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2011-02-25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>pfavA0hr3nyqO61oupj-lA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>This place sucks. The customer service is horr...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>yFumR3CWzpfvTH2FCthvVw</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-06-15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STiFMww2z31siPY7BWNC2g</td>\n",
+       "      <td>5</td>\n",
+       "      <td>I have been an Emerald Club member for a numbe...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>TlvV-xJhmh7LCwJYXkV-cg</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>689</td>\n",
+       "      <td>BTcY04QFiS1uh-RpkR7rAg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013-06-02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6_A58CCY8SHB7r-Wu7-A5g</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Came here with my 2 year old daughter for our ...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>q3AiAe-AcpDrNsdZf8nCvQ</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4874</td>\n",
+       "      <td>t0T_4MM4EUHbCzBTF11FHA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-08-14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>KqQwNyfoFiJOw911mrULIg</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Great little restaurant. Not to many tables an...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NJxaA7q9BhqaDrFpfR2Jeg</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>564</td>\n",
+       "      <td>5XYR6doRa5Nj1JMfSDei6A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-06-14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>xlGJkxoIBl8XH8wVsPZpnw</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Always great friendly service and fresh baked ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>kBNFdviedCPFWyR-wVaAzw</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3458</td>\n",
+       "      <td>aLcFhMe6DDJ430zelCpd2A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013-10-02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>kwiEG_KCpDB6aK5fTSM7iw</td>\n",
+       "      <td>2</td>\n",
+       "      <td>We were expecting amazing Thai food after all ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PkRFSQgSfca9Tamq7b2LdQ</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4206</td>\n",
+       "      <td>WdBWhGe4Siqg3IYTc4_K4A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-08-15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>O0ttxNGxHKtD8Cnnwc_j1g</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Sunday at 8p. Not many people here at all. We ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ic9zIsm7zoxUm3Axyegx8g</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2610 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 business_id  cool        date  funny               review_id  \\\n",
+       "1     pomGBqfbxcqPv14c3XH-ZQ     0  2012-11-13      0  dDl8zu1vWPdKGihJrwQbpw   \n",
+       "2     jtQARsP6P-LbkyjbO1qNGg     1  2014-10-23      1  LZp4UX5zK3e-c5ZGSeo3kA   \n",
+       "4     Ums3gaP2qM3W1XcA5r6SsQ     0  2014-09-05      0  jsDu6QEJHbwP2Blom1PLCA   \n",
+       "5     vgfcTvK81oD4r50NMjU2Ag     0  2011-02-25      0  pfavA0hr3nyqO61oupj-lA   \n",
+       "10    yFumR3CWzpfvTH2FCthvVw     0  2016-06-15      0  STiFMww2z31siPY7BWNC2g   \n",
+       "...                      ...   ...         ...    ...                     ...   \n",
+       "689   BTcY04QFiS1uh-RpkR7rAg     1  2013-06-02      0  6_A58CCY8SHB7r-Wu7-A5g   \n",
+       "4874  t0T_4MM4EUHbCzBTF11FHA     0  2016-08-14      0  KqQwNyfoFiJOw911mrULIg   \n",
+       "564   5XYR6doRa5Nj1JMfSDei6A     1  2016-06-14      0  xlGJkxoIBl8XH8wVsPZpnw   \n",
+       "3458  aLcFhMe6DDJ430zelCpd2A     0  2013-10-02      0  kwiEG_KCpDB6aK5fTSM7iw   \n",
+       "4206  WdBWhGe4Siqg3IYTc4_K4A     0  2016-08-15      0  O0ttxNGxHKtD8Cnnwc_j1g   \n",
+       "\n",
+       "      stars                                               text  useful  \\\n",
+       "1         5  I love this place! My fiance And I go here atl...       0   \n",
+       "2         1  Terrible. Dry corn bread. Rib tips were all fa...       3   \n",
+       "4         5  Delicious healthy food. The steak is amazing. ...       0   \n",
+       "5         1  This place sucks. The customer service is horr...       2   \n",
+       "10        5  I have been an Emerald Club member for a numbe...       0   \n",
+       "...     ...                                                ...     ...   \n",
+       "689       5  Came here with my 2 year old daughter for our ...       2   \n",
+       "4874      5  Great little restaurant. Not to many tables an...       0   \n",
+       "564       5  Always great friendly service and fresh baked ...       0   \n",
+       "3458      2  We were expecting amazing Thai food after all ...       1   \n",
+       "4206      1  Sunday at 8p. Not many people here at all. We ...       0   \n",
+       "\n",
+       "                     user_id  month Review_length  \n",
+       "1     msQe1u7Z_XuqjGoqhB0J5g     11          Long  \n",
+       "2     msQe1u7Z_XuqjGoqhB0J5g     10          Long  \n",
+       "4     msQe1u7Z_XuqjGoqhB0J5g      9          Long  \n",
+       "5     msQe1u7Z_XuqjGoqhB0J5g      2          Long  \n",
+       "10    TlvV-xJhmh7LCwJYXkV-cg      6          Long  \n",
+       "...                      ...    ...           ...  \n",
+       "689   q3AiAe-AcpDrNsdZf8nCvQ      6          Long  \n",
+       "4874  NJxaA7q9BhqaDrFpfR2Jeg      8          Long  \n",
+       "564   kBNFdviedCPFWyR-wVaAzw      6          Long  \n",
+       "3458  PkRFSQgSfca9Tamq7b2LdQ     10          Long  \n",
+       "4206  ic9zIsm7zoxUm3Axyegx8g      8          Long  \n",
+       "\n",
+       "[2610 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Rewrite the following function as a lambda function\n",
     "def rewrite_as_lambda(value):\n",
@@ -364,7 +606,8 @@
     "        return 'Long'\n",
     "# Hint: nest your if, else conditionals\n",
     "\n",
-    "df['Review_length'] = df.text.map(lambda x: 'Short' if len(x) < 50 else 'Medium' if len(x) < 80 else 'Long')\n"
+    "df['Review_length'] = df.text.map(lambda x: 'Short' if len(x) < 50 else 'Medium' if len(x) < 80 else 'Long')\n",
+    "df\n"
    ]
   },
   {
