--- a/index.ipynb
+++ b/index.ipynb
@@ -378,7 +378,7 @@
     "# Hint: nest your if, else conditionals\n",
     "\n",
     "df['Review_length'] = df.text.map(lambda x: 'Short' if len(x) < 50 else 'Medium' if len(x) < 80 else 'Long')\n",
-    "df.value_counts()\n"
+    "df.Review_value_counts()\n"
    ]
   },
   {
