--- a/index.ipynb
+++ b/index.ipynb
@@ -431,7 +431,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df['date'] = df['date'].dt.strftime('%DD')"
+    "df['date'] = df['date'].dt.strftime('%d/%')"
    ]
   },
   {
