--- a/index.ipynb
+++ b/index.ipynb
@@ -446,7 +446,9 @@
    ],
    "source": [
     "# Your code here\n",
-    "df['date'] = df['date'].dt.strftime('%d/%m/%Y')"
+    "df['date'] = df['date'].dt.strftime('%d/%m/%Y')\n",
+    "\n",
+    "\n"
    ]
   },
   {
