--- a/index.ipynb
+++ b/index.ipynb
@@ -447,7 +447,7 @@
    "source": [
     "# Your code here\n",
     "df['date'] = df['date'].dt.strftime('%d/%m/%Y')\n",
-    "df['date'] = df['date']\n",
+    "df['date'] = df['date'].map(lambda x:)\n",
     "\n",
     "df['comment_length'] = df.text.map(lambda x: len(x.split()))\n",
     "\n"
