--- a/index.ipynb
+++ b/index.ipynb
@@ -474,7 +474,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "pd.to_datetime\n",
+    "pd.to_datetime('df.')\n",
     "df['date'] = df['date'].dt.strftime('%d/%m/%Y')\n",
     "df['date'] = df['date'].map(lambda x: x.to_datetime)\n",
     "df['comment_length'] = df.text.map(lambda x: len(x.split()))\n",
