--- a/index.ipynb
+++ b/index.ipynb
@@ -283,13 +283,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1       11\n",
+       "2       10\n",
+       "4       09\n",
+       "5       02\n",
+       "10      06\n",
+       "        ..\n",
+       "689     06\n",
+       "4874    08\n",
+       "564     06\n",
+       "3458    10\n",
+       "4206    08\n",
+       "Name: date, Length: 2610, dtype: object"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import datetime\n",
     "# Your code here\n",
-    "df.date.map(lambda x: x)"
+    "df.date.map(lambda x: x[5:7])"
    ]
   },
   {
