--- a/index.ipynb
+++ b/index.ipynb
@@ -341,12 +341,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1        58\n",
+       "2        30\n",
+       "4        30\n",
+       "5        82\n",
+       "10       32\n",
+       "       ... \n",
+       "689      61\n",
+       "4874     43\n",
+       "564      79\n",
+       "3458    185\n",
+       "4206     42\n",
+       "Name: text, Length: 2610, dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "df['comment_length'] = df.text.map(lambda x: len(x.split()))\n"
+    "df.text.map(lambda x: len(x.split()))\n"
    ]
   },
   {
