--- a/index.ipynb
+++ b/index.ipynb
@@ -537,7 +537,7 @@
     "        return 'Long'\n",
     "# Hint: nest your if, else conditionals\n",
     "\n",
-    "df['Review_length'] = df.text.map(lambda x: 'Short' if len(x) < 50 else 'Medium' if len(x) < 80 else 'Long')"
+    "df['Review_length'] = df.text.map(lambda x: 'Short' if len(x) < 50 else ('Medium' if len(x) < 80 else 'Long')"
    ]
   },
   {
