--- a/index.ipynb
+++ b/index.ipynb
@@ -551,7 +551,7 @@
     "        return 'Long'\n",
     "# Hint: nest your if, else conditionals\n",
     "\n",
-    "df['Review_length'] = df.text.map(lambda x: 'Short' if len(x) < 50 else ('Medium' if len(x) < 80 else 'Long'))\n",
+    "df['Review_length'] = df.review_length.map(lambda x: 'Short' if x < 50 else ('Medium' if len(x < 80 else 'Long'))\n",
     "df.Review_length.value_counts()"
    ]
   },
