--- a/index.ipynb
+++ b/index.ipynb
@@ -523,19 +523,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Short     1287\n",
-       "Long       769\n",
-       "Medium     554\n",
-       "Name: Review_length, dtype: int64"
+       "Short     0.493103\n",
+       "Long      0.294636\n",
+       "Medium    0.212261\n",
+       "Name: Review_length, dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
     "# Hint: nest your if, else conditionals\n",
     "\n",
     "df['Review_length'] = df.review_length.map(lambda x: 'Short' if x < 50 else ('Medium' if x < 80 else 'Long'))\n",
-    "df.Review_length.value_counts(nora)"
+    "df.Review_length.value_counts(normalize=True)"
    ]
   },
   {
