--- a/index.ipynb
+++ b/index.ipynb
@@ -652,7 +652,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "df['date'] = df['date'].\n"
+    "df['date'] = df['date'].map(lambda x: )\n"
    ]
   },
   {
