--- a/index.ipynb
+++ b/index.ipynb
@@ -652,7 +652,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "df['date'] = df['date'].map(lambda x: '{}-{}-{}'.format(x[-2],x[],x))\n"
+    "df['date'] = df['date'].map(lambda x: '{}-{}-{}'.format(x[-2],x[],x[:4]))\n"
    ]
   },
   {
